exports[`SearchBox applies its default props 1`] = `
<form
  className="ais-SearchBox__root"
  noValidate={true}
  onReset={[Function]}
  onSubmit={[Function]}>
  <div
    className="ais-SearchBox__wrapper"
    role="search">
    <input
      autoComplete="off"
      autoFocus={false}
      className="ais-SearchBox__input"
      onChange={[Function]}
      placeholder="Search here…"
      required={true}
      type="search"
      value="" />
    <button
      className="ais-SearchBox__reset"
      title="Clear the search query."
      type="reset">
      <svg
        viewBox="0 0 26 26"
        xmlns="http://www.w3.org/2000/svg">
        <g
          fill="none"
          fillRule="evenodd">
          <path
            d="M12.99883 9.92647L22.22236.70294c.85882-.85647 2.2306-.84706 3.08235 0 .8518.85412.8471 2.22588 0 3.0753l-9.2329 9.22353 9.22353 9.22353c.85648.85882.84707 2.23058 0 3.08235-.8541.85176-2.22587.84706-3.0753 0l-9.22116-9.23294-9.22353 9.22357c-.85646.85647-2.22823.84706-3.07764 0-.85413-.85412-.84707-2.2259 0-3.0753l9.22823-9.22117L.70235 3.77823C-.1541 2.92177-.1541 1.55.69295.69588c.85647-.85176 2.22823-.84706 3.07764 0l9.2282 9.2353v-.0047z" />
        </g>
      </svg>
    </button>
  </div>
</form>
`;

exports[`SearchBox lets you customize its theme 1`] = `
<form
  className="ais-SearchBox__root"
  noValidate={true}
  onReset={[Function]}
  onSubmit={[Function]}>
  <div
    className="ais-SearchBox__wrapper"
    role="search">
    <input
      autoComplete="off"
      autoFocus={false}
      className="ais-SearchBox__input"
      onChange={[Function]}
      placeholder="Search here…"
      required={true}
      type="search"
      value="" />
    <button
      className="ais-SearchBox__reset"
      title="Clear the search query."
      type="reset">
      <svg
        viewBox="0 0 26 26"
        xmlns="http://www.w3.org/2000/svg">
        <g
          fill="none"
          fillRule="evenodd">
          <path
            d="M12.99883 9.92647L22.22236.70294c.85882-.85647 2.2306-.84706 3.08235 0 .8518.85412.8471 2.22588 0 3.0753l-9.2329 9.22353 9.22353 9.22353c.85648.85882.84707 2.23058 0 3.08235-.8541.85176-2.22587.84706-3.0753 0l-9.22116-9.23294-9.22353 9.22357c-.85646.85647-2.22823.84706-3.07764 0-.85413-.85412-.84707-2.2259 0-3.0753l9.22823-9.22117L.70235 3.77823C-.1541 2.92177-.1541 1.55.69295.69588c.85647-.85176 2.22823-.84706 3.07764 0l9.2282 9.2353v-.0047z" />
        </g>
      </svg>
    </button>
  </div>
</form>
`;

exports[`SearchBox lets you customize its translations 1`] = `
<form
  className="ais-SearchBox__root"
  noValidate={true}
  onReset={[Function]}
  onSubmit={[Function]}>
  <div
    className="ais-SearchBox__wrapper"
    role="search">
    <input
      autoComplete="off"
      autoFocus={false}
      className="ais-SearchBox__input"
      onChange={[Function]}
      placeholder="PLACEHOLDER"
      required={true}
      type="search"
      value="" />
    <button
      className="ais-SearchBox__reset"
      title="RESET_TITLE"
      type="reset">
      RESET
      <svg
        viewBox="0 0 26 26"
        xmlns="http://www.w3.org/2000/svg">
        <g
          fill="none"
          fillRule="evenodd">
          <path
            d="M12.99883 9.92647L22.22236.70294c.85882-.85647 2.2306-.84706 3.08235 0 .8518.85412.8471 2.22588 0 3.0753l-9.2329 9.22353 9.22353 9.22353c.85648.85882.84707 2.23058 0 3.08235-.8541.85176-2.22587.84706-3.0753 0l-9.22116-9.23294-9.22353 9.22357c-.85646.85647-2.22823.84706-3.07764 0-.85413-.85412-.84707-2.2259 0-3.0753l9.22823-9.22117L.70235 3.77823C-.1541 2.92177-.1541 1.55.69295.69588c.85647-.85176 2.22823-.84706 3.07764 0l9.2282 9.2353v-.0047z" />
        </g>
      </svg>
    </button>
  </div>
</form>
`;

exports[`SearchBox transfers the autoFocus prop to the underlying input element 1`] = `
<form
  className="ais-SearchBox__root"
  noValidate={true}
  onReset={[Function]}
  onSubmit={[Function]}>
  <div
    className="ais-SearchBox__wrapper"
    role="search">
    <input
      autoComplete="off"
      autoFocus={true}
      className="ais-SearchBox__input"
      onChange={[Function]}
      placeholder="Search here…"
      required={true}
      type="search"
      value="" />
    <button
      className="ais-SearchBox__reset"
      title="Clear the search query."
      type="reset">
      <svg
        viewBox="0 0 26 26"
        xmlns="http://www.w3.org/2000/svg">
        <g
          fill="none"
          fillRule="evenodd">
          <path
            d="M12.99883 9.92647L22.22236.70294c.85882-.85647 2.2306-.84706 3.08235 0 .8518.85412.8471 2.22588 0 3.0753l-9.2329 9.22353 9.22353 9.22353c.85648.85882.84707 2.23058 0 3.08235-.8541.85176-2.22587.84706-3.0753 0l-9.22116-9.23294-9.22353 9.22357c-.85646.85647-2.22823.84706-3.07764 0-.85413-.85412-.84707-2.2259 0-3.0753l9.22823-9.22117L.70235 3.77823C-.1541 2.92177-.1541 1.55.69295.69588c.85647-.85176 2.22823-.84706 3.07764 0l9.2282 9.2353v-.0047z" />
        </g>
      </svg>
    </button>
  </div>
</form>
`;

exports[`SearchBox treats its query prop as its input value 1`] = `
<form
  className="ais-SearchBox__root"
  noValidate={true}
  onReset={[Function]}
  onSubmit={[Function]}>
  <div
    className="ais-SearchBox__wrapper"
    role="search">
    <input
      autoComplete="off"
      autoFocus={false}
      className="ais-SearchBox__input"
      onChange={[Function]}
      placeholder="Search here…"
      required={true}
      type="search"
      value="QUERY1" />
    <button
      className="ais-SearchBox__reset"
      title="Clear the search query."
      type="reset">
      <svg
        viewBox="0 0 26 26"
        xmlns="http://www.w3.org/2000/svg">
        <g
          fill="none"
          fillRule="evenodd">
          <path
            d="M12.99883 9.92647L22.22236.70294c.85882-.85647 2.2306-.84706 3.08235 0 .8518.85412.8471 2.22588 0 3.0753l-9.2329 9.22353 9.22353 9.22353c.85648.85882.84707 2.23058 0 3.08235-.8541.85176-2.22587.84706-3.0753 0l-9.22116-9.23294-9.22353 9.22357c-.85646.85647-2.22823.84706-3.07764 0-.85413-.85412-.84707-2.2259 0-3.0753l9.22823-9.22117L.70235 3.77823C-.1541 2.92177-.1541 1.55.69295.69588c.85647-.85176 2.22823-.84706 3.07764 0l9.2282 9.2353v-.0047z" />
        </g>
      </svg>
    </button>
  </div>
</form>
`;

exports[`SearchBox treats its query prop as its input value 2`] = `
<form
  className="ais-SearchBox__root"
  noValidate={true}
  onReset={[Function]}
  onSubmit={[Function]}>
  <div
    className="ais-SearchBox__wrapper"
    role="search">
    <input
      autoComplete="off"
      autoFocus={false}
      className="ais-SearchBox__input"
      onChange={[Function]}
      placeholder="Search here…"
      required={true}
      type="search"
      value="QUERY2" />
    <button
      className="ais-SearchBox__reset"
      title="Clear the search query."
      type="reset">
      <svg
        viewBox="0 0 26 26"
        xmlns="http://www.w3.org/2000/svg">
        <g
          fill="none"
          fillRule="evenodd">
          <path
            d="M12.99883 9.92647L22.22236.70294c.85882-.85647 2.2306-.84706 3.08235 0 .8518.85412.8471 2.22588 0 3.0753l-9.2329 9.22353 9.22353 9.22353c.85648.85882.84707 2.23058 0 3.08235-.8541.85176-2.22587.84706-3.0753 0l-9.22116-9.23294-9.22353 9.22357c-.85646.85647-2.22823.84706-3.07764 0-.85413-.85412-.84707-2.2259 0-3.0753l9.22823-9.22117L.70235 3.77823C-.1541 2.92177-.1541 1.55.69295.69588c.85647-.85176 2.22823-.84706 3.07764 0l9.2282 9.2353v-.0047z" />
        </g>
      </svg>
    </button>
  </div>
</form>
`;
